--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,11 @@
 {
   "version": 2,
-  "builds": [{ "src": "gemini_translation.py", "use": "@vercel/python" }],
-  "routes": [{ "src": "/(.*)", "dest": "gemini_translation.py" }]
+  "builds": [
+    { "src": "gemini_translation.py", "use": "@vercel/python" },
+    { "src": "rag_engine_gemini_api.py", "use": "@vercel/python" }
+  ],
+  "routes": [
+    { "src": "/aitranslator", "dest": "gemini_translation.py" },
+    { "src": "/contentgeneratorbot", "dest": "rag_engine_gemini_api.py" }
+  ]
 }
