Streamlit cloud apps
This is for the deployment for the streamlit app

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,15 @@
-google.generativeai
-flask
+google-generativeai
+langchain_google_genai
+streamlit
+langchain
+langchain_pinecone
+langchain_community
 python-dotenv
-langchain_core
+google.generativeai
+sentence-transformers
+pinecone
 pillow
+rapidocr-onnxruntime
+pypdf
+flask
+openpyxl
