--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,6 @@
 google-generativeai
-langchain_google_genai
-streamlit
-langchain
-langchain_pinecone
-langchain_community
 python-dotenv
-google.generativeai
-sentence-transformers
-pinecone
 pillow
-rapidocr-onnxruntime
-pypdf
 flask
-openpyxl
+langchain_core
+
