--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,9 @@
 {
   "version": 2,
   "builds": [
-    { "src": "gemini_translation.py", "use": "@vercel/python" },
+    { "src": "gemini_translation_api.py", "use": "@vercel/python" },
     { "src": "gemini_img_desc_api.py", "use": "@vercel/python" },
-    { "src": "gemini_img_desc.py", "use": "@vercel/python" },
+    { "src": "gemini_img_to_text_api.py", "use": "@vercel/python" },
     { "src": "genaibot_api.py", "use": "@vercel/python" }
   ],
   "routes": [
