chnages in the theme
added the new files and changes in the theme

--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,5 +1,5 @@
 [theme]
-primaryColor="#000" 
+primaryColor="#7BD271" 
 backgroundColor="#000"
 secondaryBackgroundColor="#191c24"
 font="monospace"
