--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,8 +1,9 @@
 [theme]
-primaryColor="#7BD271" 
-backgroundColor="#000"
-secondaryBackgroundColor="#191c24"
-font="monospace"
+primaryColor="#879e82"
+backgroundColor="#78938a"
+secondaryBackgroundColor="#1e3d58"
 textColor="#fff"
+font="monospace"
+
 [client]
 showSidebarNavigation = false
