--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -1,6 +1,6 @@
 PINECONE_API_KEY = "610b639f-dad6-48f9-a78a-7a55ca351a4c"
 PINECONE_ENVIRONMENT = "gcp-starter"
 PINECONE_INDEX = "geminiindex"
-PINECONE_SEO_INDEX = "geminiindex"
+PINECONE_SEO_INDEX="seometadata"
 GEMINI_API_KEY = "AIzaSyCJdRNcc_XUVprMJ1aZdTyrNFJw_baAqkc"
 DOC_DIR_PATH = "./documents/"
